--- a/.github/workflows/daily-push.yml
+++ b/.github/workflows/daily-push.yml
@@ -1,9 +1,8 @@
 name: Daily Code Push
-
 on:
   schedule:
-    - cron: '30 5 * * *'  # Runs every day at 5:30 AM UTC (change as needed)
-  workflow_dispatch:      # Allows manual runs
+    - cron: '30 5 * * *' # Runs every day at 5:30 AM UTC (change as needed)
+  workflow_dispatch: # Allows manual runs
 
 jobs:
   push-update:
@@ -12,12 +11,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-  
+      - name: Create update log
+        run: |
+          echo "Daily update: $(date '+%Y-%m-%d %H:%M:%S')" > update.log
+          echo "Repository maintenance completed successfully" >> update.log
 
       - name: Commit changes
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add update.log
-          git commit -m "Automated daily update: $(date '+%Y-%m-%d')"
-          git push
+          git commit -m "Automated daily update: $(date '+%Y-%m-%d')" || echo "No changes to commit"
+          git push || echo "No changes to push"
